# oh-brother

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pyre_configuration  Pipfile  README.md  brother_printer_fwupd.py  oh-brother.py  pyproject.toml  requirements.txt
brother_printer_fwupd/: __init__.py  __main__.py  autodiscover_printer.py  firmware_downloader.py  firmware_uploader.py  models.py  snmp_info.py  utils.py
