[tool.poetry]
name = "brother_printer_fwupd"
version = "0.4.0"
description = "Script to update the firmware of some Brother printers (e. g. MFC)."
authors = ["sedrubal <dev@sedrubal.de>"]
repository = "https://github.com/sedrubal/brother_printer_fwupd.git"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
pysnmp = "^4.4.12"
requests = "^2.23.0"
BeautifulSoup4 = "^4.9.1"
Gooey = { version = "^1.0.3", optional = true }
lxml = "^4.6.2"
zeroconf = { version = "^0.28.7", optional = true }
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
mypy = "^0.790"
black = "^20.8b1"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.extras]
graphical = ["Gooey"]
autodiscover = ["zeroconf"]

[tool.poetry.scripts]
brother_printer_fwupd = 'brother_printer_fwupd.__main__:main'
