[tool.poetry]
name = "brother_printer_fwupd"
version = "0.5.2"
description = "Script to update the firmware of some Brother printers (e. g. MFC)."
authors = ["sedrubal <dev@sedrubal.de>"]
repository = "https://github.com/sedrubal/brother_printer_fwupd.git"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
pysnmp = "^4.4.12"
requests = "^2.27.1"
BeautifulSoup4 = "^4.9.1"
Gooey = { version = "^1.0.3", optional = true }
lxml = "^4.9.0"
zeroconf = "^0.28.7"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.0"
mypy = "^0.960"
pre-commit = "^2.19.0"
black = "^22.3.0"
types-requests = "^2.27.30"
types-termcolor = "^1.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.extras]
graphical = ["Gooey"]

[tool.poetry.scripts]
brother_printer_fwupd = 'brother_printer_fwupd.__main__:main'
